Code/Z3Parser/Z3Parser/Elfsquad/Archer/Elfsquad.Core.Archer/Lang/ArcherParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./Archer.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class ArcherParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, ID=27, STRING=28, NUMBER=29, BOOLEAN=30, COMMENT=31, 
		MODIFIER=32, KEY=33, MUL=34, DIV=35, MIN=36, ADD=37, GREATERTHAN=38, LESSTHAN=39, 
		GREATERTHAN_E=40, LESSTHAN_E=41, EQUALS=42, AND=43, OR=44, WS=45;
	public const int
		RULE_prog = 0, RULE_stat = 1, RULE_typeDeclr = 2, RULE_objectiveDeclr = 3, 
		RULE_paramList = 4, RULE_idList = 5, RULE_expr = 6, RULE_cardinExpr = 7, 
		RULE_funcCall = 8, RULE_mulDivExprOp = 9, RULE_addSubExprOp = 10, RULE_equalExprOp = 11, 
		RULE_logicalExprOp = 12, RULE_propExpr = 13, RULE_obj = 14, RULE_pair = 15, 
		RULE_value = 16, RULE_primitiveValue = 17, RULE_array = 18, RULE_listCompr = 19;
	public static readonly string[] ruleNames = {
		"prog", "stat", "typeDeclr", "objectiveDeclr", "paramList", "idList", 
		"expr", "cardinExpr", "funcCall", "mulDivExprOp", "addSubExprOp", "equalExprOp", 
		"logicalExprOp", "propExpr", "obj", "pair", "value", "primitiveValue", 
		"array", "listCompr"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'model'", "'{'", "'}'", "'->'", "'constraint'", "'condition'", 
		"'='", "'lower_bound'", "'upper_bound'", "'func'", "'('", "','", "')'", 
		"'=>'", "'#include'", "'int'", "'float'", "'minimize'", "'maximize'", 
		"':'", "'.'", "'['", "']'", "'for'", "'in'", null, null, null, null, null, 
		null, null, "'*'", "'/'", "'-'", "'+'", "'>'", "'<'", "'>='", "'<='", 
		null, "'&&'", "'||'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "ID", "STRING", "NUMBER", "BOOLEAN", "COMMENT", "MODIFIER", 
		"KEY", "MUL", "DIV", "MIN", "ADD", "GREATERTHAN", "LESSTHAN", "GREATERTHAN_E", 
		"LESSTHAN_E", "EQUALS", "AND", "OR", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Archer.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ArcherParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ArcherParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ArcherParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ArcherParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 40;
				stat();
				State = 42;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__0) {
					{
					State = 41;
					Match(T__0);
					}
				}

				}
				}
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__5) | (1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << ID) | (1L << COMMENT))) != 0) );
			State = 48;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatContext : ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stat; } }
	 
		public StatContext() { }
		public virtual void CopyFrom(StatContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CommentStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT() { return GetToken(ArcherParser.COMMENT, 0); }
		public CommentStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterCommentStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitCommentStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommentStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConstraintStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ConstraintStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterConstraintStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitConstraintStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstraintStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UpperBoundStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ArcherParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public UpperBoundStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterUpperBoundStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitUpperBoundStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUpperBoundStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ModelStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ArcherParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdListContext idList() {
			return GetRuleContext<IdListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext[] stat() {
			return GetRuleContexts<StatContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatContext stat(int i) {
			return GetRuleContext<StatContext>(i);
		}
		public ModelStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterModelStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitModelStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModelStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LowerBoundStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ArcherParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public LowerBoundStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterLowerBoundStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitLowerBoundStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLowerBoundStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IncludeStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(ArcherParser.STRING, 0); }
		public IncludeStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterIncludeStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitIncludeStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncludeStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VariableDeclarationStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ArcherParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclrContext typeDeclr() {
			return GetRuleContext<TypeDeclrContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjContext obj() {
			return GetRuleContext<ObjContext>(0);
		}
		public VariableDeclarationStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterVariableDeclarationStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitVariableDeclarationStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclarationStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FuncDeclarationStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] KEY() { return GetTokens(ArcherParser.KEY); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KEY(int i) {
			return GetToken(ArcherParser.KEY, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public FuncDeclarationStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterFuncDeclarationStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitFuncDeclarationStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDeclarationStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ObjectiveStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ObjectiveDeclrContext objectiveDeclr() {
			return GetRuleContext<ObjectiveDeclrContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ObjectiveStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterObjectiveStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitObjectiveStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitObjectiveStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RelationshipStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(ArcherParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(ArcherParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MIN() { return GetToken(ArcherParser.MIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KEY() { return GetToken(ArcherParser.KEY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CardinExprContext cardinExpr() {
			return GetRuleContext<CardinExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ObjContext obj() {
			return GetRuleContext<ObjContext>(0);
		}
		public RelationshipStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterRelationshipStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitRelationshipStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelationshipStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConditionStatementContext : StatContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ArcherParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ConditionStatementContext(StatContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterConditionStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitConditionStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConditionStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatContext stat() {
		StatContext _localctx = new StatContext(Context, State);
		EnterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			State = 126;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				_localctx = new ModelStatementContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 50;
				Match(T__1);
				State = 51;
				Match(ID);
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__20) {
					{
					State = 52;
					idList();
					}
				}

				State = 55;
				Match(T__2);
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 56;
					stat();
					State = 58;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if (_la==T__0) {
						{
						State = 57;
						Match(T__0);
						}
					}

					}
					}
					State = 62;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__5) | (1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << ID) | (1L << COMMENT))) != 0) );
				State = 64;
				Match(T__3);
				}
				break;
			case 2:
				_localctx = new RelationshipStatementContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 66;
				Match(ID);
				State = 67;
				Match(MIN);
				State = 68;
				Match(KEY);
				State = 70;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__11) {
					{
					State = 69;
					cardinExpr();
					}
				}

				State = 72;
				Match(T__4);
				State = 73;
				Match(ID);
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__2) {
					{
					State = 74;
					obj();
					}
				}

				}
				break;
			case 3:
				_localctx = new VariableDeclarationStatementContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__16 || _la==T__17) {
					{
					State = 77;
					typeDeclr();
					}
				}

				State = 80;
				Match(ID);
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__2) {
					{
					State = 81;
					obj();
					}
				}

				}
				break;
			case 4:
				_localctx = new ConstraintStatementContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 84;
				Match(T__5);
				State = 85;
				expr(0);
				}
				break;
			case 5:
				_localctx = new ConditionStatementContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 86;
				Match(T__6);
				State = 87;
				Match(ID);
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__7) {
					{
					State = 88;
					Match(T__7);
					}
				}

				State = 91;
				expr(0);
				}
				break;
			case 6:
				_localctx = new LowerBoundStatementContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 92;
				Match(T__8);
				State = 93;
				Match(ID);
				State = 95;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__7) {
					{
					State = 94;
					Match(T__7);
					}
				}

				State = 97;
				expr(0);
				}
				break;
			case 7:
				_localctx = new UpperBoundStatementContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 98;
				Match(T__9);
				State = 99;
				Match(ID);
				State = 101;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__7) {
					{
					State = 100;
					Match(T__7);
					}
				}

				State = 103;
				expr(0);
				}
				break;
			case 8:
				_localctx = new FuncDeclarationStatementContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 104;
				Match(T__10);
				State = 105;
				Match(KEY);
				State = 106;
				Match(T__11);
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==KEY) {
					{
					State = 107;
					Match(KEY);
					State = 112;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==T__12) {
						{
						{
						State = 108;
						Match(T__12);
						State = 109;
						Match(KEY);
						}
						}
						State = 114;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}

				State = 117;
				Match(T__13);
				State = 118;
				Match(T__14);
				State = 119;
				expr(0);
				}
				break;
			case 9:
				_localctx = new IncludeStatementContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 120;
				Match(T__15);
				State = 121;
				Match(STRING);
				}
				break;
			case 10:
				_localctx = new ObjectiveStatementContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 122;
				objectiveDeclr();
				State = 123;
				expr(0);
				}
				break;
			case 11:
				_localctx = new CommentStatementContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 125;
				Match(COMMENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclrContext : ParserRuleContext {
		public TypeDeclrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDeclr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.EnterTypeDeclr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IArcherListener typedListener = listener as IArcherListener;
			if (typedListener != null) typedListener.ExitTypeDeclr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArcherVisitor<TResult> typedVisitor = visitor as IArcherVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDeclr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclrContext typeDeclr() {
		TypeDeclrContext _localctx = new TypeDeclrContext(Context, State);
		EnterRule(_localctx, 4, RULE_typeDeclr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			_la = TokenStream.LA(1);
			if ( !(_la==T__16 || _la==T__17) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
